@@ -1,5 +1,18 @@
 package cogent.com;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.stream.Stream;
+
+import org.springframework.boot.SpringApplication;
+import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.context.ConfigurableApplicationContext;
+
 import cogent.com.dto.AnswerDTO;
 import cogent.com.dto.QuestionDTO;
 import cogent.com.entity.Answer;
@@ -10,18 +23,6 @@ import cogent.com.service.ChatService;
 import cogent.com.service.QuestionService;
 import cogent.com.service.UserService;
 import cogent.com.util.UserType;
-import org.springframework.boot.SpringApplication;
-import org.springframework.boot.autoconfigure.SpringBootApplication;
-import org.springframework.context.ConfigurableApplicationContext;
-
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.stream.Stream;
 
 @SpringBootApplication
 public class BackEndApplication {
@@ -46,7 +47,7 @@ public class BackEndApplication {
 		questionService.addQuestion(new QuestionDTO(0, "Test description", "test.jpg", "04-26-2023, 12:36", false,
 				"JavaScript", "Getting to know", null, "user2", null));
 		questionService.addQuestion(new QuestionDTO(1, "Test description", "test.jpg", "04-26-2023, 12:36", true,
-				"Angular", "What is Angular?", new ArrayList<Answer>(Arrays.asList(new Answer())), "user2", "user1"));
+				"Angular", "What is Angular?", new ArrayList<Answer>(List.of(new Answer())), "user2", "user1"));
 		questionService.addQuestion(new QuestionDTO(2, "Test description", "test.jpg", "04-26-2023, 12:36", false,
 				"Java", "Too many problems with Java", null, "user2", null));
 		questionService.addQuestion(new QuestionDTO(3, "Test description", "test.jpg", "04-26-2023, 12:36", false,
@@ -63,8 +64,6 @@ public class BackEndApplication {
 		answerService.addAnswer(
 				new AnswerDTO(1, "Ha ha ha", "smileyface.jpg", false, "05-01-2023, 14:38", null, null, "user3"));
 
-		// create directories for images
-
 		ChatService chatService = ctx.getBean(ChatService.class);
 		chatService.addNewChat(new Chat("user2", "user3", "Hello", "12/29/2023"));
 		chatService.addNewChat(new Chat("user3", "user2", "How are you?", "12/29/2023"));
@@ -72,7 +71,7 @@ public class BackEndApplication {
 		chatService.addNewChat(new Chat("user5", "user2", "Welcome", "12/29/2023"));
 		chatService.addNewChat(new Chat("user2", "user4", "Do I know you?", "12/29/2023"));
 		chatService.addNewChat(new Chat("user6", "user2", "I am the ADMIN", "12/29/2023"));
-		
+		// create directories for images
 		for (String dir : new String[] { "question_images", "answer_images" }) {
 			Path directory = Paths.get("C:/CapstoneProjectFullStack/CapstoneProjectG6_FrontEnd/src/assets/" + dir);
 			if (Files.exists(directory))
